--- a/fronttradulibras/src/app/globals.css
+++ b/fronttradulibras/src/app/globals.css
@@ -128,3 +128,12 @@
     @apply bg-[var(--whiteTradu)] text-[var(--grayTradu)] font-[var(--NotoSans)];
   }
 }
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
