Troquei o banner do login e register, e o bg deles

--- a/fronttradulibras/src/app/globals.css
+++ b/fronttradulibras/src/app/globals.css
@@ -43,7 +43,7 @@
   --radius-xl: calc(var(--radius) + 4px);
 
 --color-bluetradu: #a3c8ff;
---color-darkbluetradu: #4f40ff;
+--color-darkbluetradu: #004369;
 --color-beigetradu: #ecb189;
 --color-orangetradu: #fd8700;
 --color-whitetradu: #f3f3f3;
